# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2021-Present The Zarf Authors

[profile.release]
opt-level = "z"   # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
strip = true

[package]
name = "zarf-injector"
version = "0.4.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.1"
flate2 = "1.0.25"
tar = "0.4.38"
sha2 = "0.10.6"
hex = "0.4.3"
rouille = "3.6.1"
serde_json = "1.0.95"
