# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2021-Present The Zarf Authors

rustflags = ["-C", "relocation-model=static", "-C", "strip=symbols"]


[profile.release]
opt-level = "z"   # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
strip = true

[package]
name = "zarf-injector"
version = "0.5.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.1"
flate2 = "1.0.28"
tar = "0.4.40"
sha2 = "0.10.8"
hex = {version = "0.4.3", default-features = false}
serde_json = { version = "1.0.113", default-features = false, features = ["alloc"] }
axum = {version = "0.7.5", features = ["tokio"]}
tokio = { version = "1.35.0", features = ["fs", "rt"] }
tokio-util = { version = "0.7.10", features = ["io"]}
regex-lite = "0.1.5"
