[profile.release]
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"

[package]
name = "zarf-injector"
version = "0.4.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.0"
flate2 = "1.0.24"
tar = "0.4.38"
sha2 = "0.10.2"
hex = "0.4.3"
